--- a/heroes/css/effect2.css
+++ b/heroes/css/effect2.css
@@ -6,6 +6,15 @@
     opacity: 0;
 }
 
+.fadeout{
+    -webkit-transition: opacity 3s ease-in-out;
+    -moz-transition: opacity 3s ease-in-out;
+    -ms-transition: opacity 3s ease-in-out;
+    -o-transition: opacity 3s ease-in-out;
+    opacity: 0;
+}
+
+/*
 @font-face {
 	font-weight: normal;
 	font-style: normal;
@@ -26,7 +35,7 @@
 		url('../fonts/feather/feather.ttf?-9jv4cc') format('truetype'),
 		url('../fonts/feather/feather.svg?-9jv4cc#feather') format('svg');
 }
-
+*/
 .ip-header {
 	position: fixed;
 	top: 0;
@@ -105,7 +114,7 @@
 	width: 90%;*/
 }
 
-.ip-main h2 {
+/*.ip-main h2 {
 	margin: 0;
 	padding: 0.5em 0 1em;
 	color: #1c9ccd;
@@ -113,10 +122,10 @@
 	font-size: 4.25em;
 	font-size: 4vw;
 	line-height: 1;
-}
+}*/
 
 .browser {
-	margin: 0 auto;
+	/*margin: 0 auto;
 	padding-top: 8%;
 	min-height: 400px;
 	max-width: 1000px;
@@ -124,17 +133,17 @@
 	border-radius: 8px;
 	background: #fff url(../img/browser.png) no-repeat 50% 0;
 	background-size: 100%;
-	color: #d3d3d3;
+	color: #d3d3d3;*/
 }
 
 .box {
-	float: left;
+	/*float: left;
 	padding: 3.5em;
 	width: 33.3%;
 	font-size: 0.7em;
-	line-height: 1.5;
+	line-height: 1.5;*/
 }
-
+/*
 .box p {
 	font-family: 'Blokk', Arial, sans-serif;
 }
@@ -158,7 +167,7 @@
 	speak: none;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-}
+}*/
 
 .icon-bell:before {
 	content: "\e006";
@@ -217,7 +226,7 @@
     -moz-transition: opacity 3s ease-in-out;
     -ms-transition: opacity 3s ease-in-out;
     -o-transition: opacity 3s ease-in-out;
-    opacity: 0;
+    opacity: 0.2;
     
     
 	-webkit-transform-origin: -20% 0;
@@ -331,12 +340,11 @@
 @media screen and (max-width: 45em) {
 
 	.ip-main{
-		font-size: 2.25em;
-		font-size: 10vw;
+
 	}
 
 	.box {
-		width: 100%%;
+		/* width: 100%%; */
 	}
 
 }
