--- a/heroes/css/homepage.css
+++ b/heroes/css/homepage.css
@@ -246,7 +246,7 @@ p {
     }
     
     .upcomingevents {
-        height:200%;
+        height:200vh;
     }
     
     .about-us-text{
@@ -276,6 +276,9 @@ p {
         height: 90%;
         max-width:900px;
         max-height:70vh;
+    }
+    
+    .upcomingevents {
     }
     
 }
