--- a/portfolio/css/stylish-portfolio.css
+++ b/portfolio/css/stylish-portfolio.css
@@ -165,7 +165,7 @@ hr.small {
 /* About */
 
 .about {
-    padding: 50px 0;
+    padding: 30px 0;
 }
 
 /* Services */
@@ -213,7 +213,7 @@ hr.small {
 /* Call to Action */
 
 .call-to-action {
-    padding: 50px 0;
+    padding: 10px 0;
 }
 
 .call-to-action .btn {
@@ -234,6 +234,12 @@ hr.small {
 
 /* Footer */
 
+#profile{
+    width:300px;
+    height:auto;
+}
+
 footer {
-    padding: 100px 0;
+    padding: 30px 0;
+    height:75%;
 }
