--- a/portfolio/css/stylish-portfolio.css
+++ b/portfolio/css/stylish-portfolio.css
@@ -16,6 +16,10 @@ body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+img {
+    max-width: 100%;
+}
+
 .text-vertical-center {
     display: table-cell;
     text-align: center;
