--- a/portfolio/css/stylish-portfolio.css
+++ b/portfolio/css/stylish-portfolio.css
@@ -159,7 +159,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
+    background: url(../img/iphone3.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -169,6 +169,7 @@ hr.small {
 /* About */
 
 .about {
+    margin: 30px 0 0 0;
     padding: 30px 0;
 }
 
