--- a/portfolio/css/stylish-portfolio.css
+++ b/portfolio/css/stylish-portfolio.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 /* Global Styles */
 
 html,
@@ -166,10 +160,13 @@ hr.small {
     -o-background-size: cover;
 }
 
+.arrow {
+    margin: 30px 0 70px 0;
+}
+
 /* About */
 
 .about {
-    margin: 30px 0 0 0;
     padding: 30px 0;
 }
 
